--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:voices": "node test-elevenlabs-voices.js"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
@@ -14,6 +15,7 @@
     "@supabase/supabase-js": "^2.39.1",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "elevenlabs-node": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
